--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+@import '~antd/dist/antd.css';
+
 :root{
     font-size: 10px;
+
+    /* Colors */
+    --whitec: #fff;
+
+    /* Backgrounds */
+    --whitebg: #fff;
 }
 
 body{
@@ -43,23 +51,61 @@ button{
     cursor: pointer;
 }
 
-.m1{
-    margin-top: 1rem;
-}
-
-.content{
-    padding: 2rem 0;
-}
-
 .container{
     width: 100%;
-    max-width: 1100px;
     margin: 0 auto;
+    max-width: 1400px;
 }
 
-.content__inner{
+/* Вспомогательные классы */
+.w100{
     width: 100%;
+}
+
+.df{
     display: flex;
-    flex-direction: column;
+}
+
+.aic{
+    align-items: center;
+}
+
+.aifs{
     align-items: flex-start;
+}
+
+.aife{
+    align-items: flex-end;
+}
+
+.jcc{
+    justify-content: center;
+}
+
+.jcsb{
+    justify-content: space-between;
+}
+
+.fdc{
+    flex-direction: column;
+}
+
+.fw{
+    flex-wrap: wrap;
+}
+
+.fs{
+    flex-shrink: 0;
+}
+
+/* Шапка */
+.header{
+    padding: 2rem 0;
+    background: var(--whitebg);
+}
+
+.header__logo{
+    font-weight: 800;
+    font-size: 2.4rem;
+    line-height: 1;
 }
